[package]
name = "apeing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime + WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# HTTP & CLI
warp = "0.3"
clap = { version = "4.1", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana SDK
solana-client = { version = "1.18" }
solana-sdk = "1.18"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Environment config & errors
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.14"

# Utilities
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
