[package]
name = "apeing"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime + WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tungstenite = { version = "0.21", features = ["native-tls"] }

# HTTP & CLI
warp = "0.3"
clap = { version = "4.1", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana SDK
solana-client = { version = "1.18" }
solana-sdk = "1.18"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Environment config & errors
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.14"

# Utilities
futures = "0.3"
chrono = "0.4.41"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
